Fix alignment in welcome message

--- a/components/Welcome/styles.module.scss
+++ b/components/Welcome/styles.module.scss
@@ -2,13 +2,14 @@
   &__wrapper {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     text-align: center;
     gap: var(--spacing-lg);
     pointer-events: auto;
     @media (min-width: 1100px) {
       text-align: start;
+      align-items: flex-start;
     }
   }
   &__title {
